--- a/dynamic-form/package.json
+++ b/dynamic-form/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^16.10.2",
     "react-highlight": "^0.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-syntax-highlighter": "^11.0.2"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
